--- a/app/views/actors/index.html.erb
+++ b/app/views/actors/index.html.erb
@@ -20,7 +20,7 @@
       <tr>
         <td><%= actor.name %></td>
         <td><%= actor.bio %></td>
-        <td><%= actor.image %></td>
+        <td><img src='<%= actor.image %>' class='img-responsive'></td>
         <td><%= actor.dob %></td>
         <td>
           <a href="/actors/<%= actor.id %>" class="btn btn-primary">Show</a>
