--- a/app/views/actors/show.html.erb
+++ b/app/views/actors/show.html.erb
@@ -12,7 +12,7 @@
       <dd><%= @actor.bio %></dd>
 
       <dt>Image</dt>
-      <dd><%= @actor.image %></dd>
+      <dd><img src="<%= @actor.image %>" class="img-responsive"></dd>
 
       <dt>Dob</dt>
       <dd><%= @actor.dob %></dd>
