--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -20,7 +20,13 @@
       <tr>
         <td><%= movie.title %></td>
         <td><%= movie.year %></td>
-        <td><%= movie.director.name %></td>
+        <td>
+          <% if movie.director.present? %>
+            <a href="/directors/<%= movie.director.id %>">
+              <%= movie.director.name %>
+            </a>
+          <% end %>
+        </td>
         <td><%= movie.image %></td>
         <td>
           <a href="/movies/<%= movie.id %>" class="btn btn-primary">Show</a>
